# ofsht

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  mise.toml  release-plz.toml  renovate.json5  rustfmt.toml
.claude/: CLAUDE.md
.github/: renovate.json
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci.yaml  release.yaml
docs/: RELEASE.md  TEST.md
docs/assets/vhs/: quick-start.tape
src/: cli.rs  color.rs  commands.rs  config.rs  domain.rs  hooks.rs  integrations.rs  lib.rs  main.rs  path_utils.rs  service.rs  shell_completion.rs  stdin.rs
src/commands/: add.rs  cd.rs  common.rs  completion.rs  create.rs  init.rs  list.rs  list_display.rs  open.rs  rm.rs  shell_init.rs  sync.rs
src/config/: loader.rs  schema.rs  template_generator.rs
src/domain/: worktree.rs
src/hooks/: executor.rs  files.rs  mod.rs  output.rs  runner.rs  symlink.rs
src/integrations/: fzf.rs  git.rs  tmux.rs  zoxide.rs
src/integrations/gh/: client.rs  input.rs  mod.rs
templates/: bash.sh  fish.fish  zsh.sh
tests/: color_mode.rs  completions.rs  completions_behavior.rs  init.rs  local_config.rs  repo_root.rs  rm_current.rs  rm_multiple.rs  start_point_completion.rs  stdin_input.rs
