[package]
name = "ofsht"
version = "0.2.0"
edition = "2021"
authors = ["wadackel"]
description = "Git worktree management tool"
license = "MIT"
repository = "https://github.com/wadackel/ofsht"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
dirs = "5"
globset = "0.4"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-humanize = "0.2"
supports-color = "3"
owo-colors = { version = "4", features = ["supports-colors"] }
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
temp-env = "0.3"
serial_test = "3"
tempfile = "3"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
